--- a/feign-reactor-cloud/pom.xml
+++ b/feign-reactor-cloud/pom.xml
@@ -29,27 +29,32 @@
         <dependency>
             <groupId>com.netflix.hystrix</groupId>
             <artifactId>hystrix-core</artifactId>
+            <version>1.5.18</version>
         </dependency>
 
         <!--Ribbon-->
         <dependency>
             <groupId>com.netflix.ribbon</groupId>
             <artifactId>ribbon</artifactId>
+            <version>2.7.18</version>
         </dependency>
 
         <dependency>
             <groupId>com.netflix.ribbon</groupId>
             <artifactId>ribbon-httpclient</artifactId>
+            <version>2.7.18</version>
         </dependency>
 
         <dependency>
             <groupId>com.netflix.ribbon</groupId>
             <artifactId>ribbon-core</artifactId>
+            <version>2.7.18</version>
         </dependency>
 
         <dependency>
             <groupId>com.netflix.ribbon</groupId>
             <artifactId>ribbon-loadbalancer</artifactId>
+            <version>2.7.18</version>
         </dependency>
 
         <dependency>
