--- a/feign-reactor-parent/pom.xml
+++ b/feign-reactor-parent/pom.xml
@@ -18,8 +18,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <!--BOMs-->
-        <spring-cloud-bom.version>Hoxton.SR9</spring-cloud-bom.version>
-        <spring-boot-dependencies-bom.version>2.3.5.RELEASE</spring-boot-dependencies-bom.version>
+        <spring-cloud-bom.version>2020.0.1</spring-cloud-bom.version>
+        <spring-boot-dependencies-bom.version>2.4.2</spring-boot-dependencies-bom.version>
 
         <!--other-->
         <json-reactor.version>0.0.4</json-reactor.version>
