--- a/feign-reactor-spring-configuration/pom.xml
+++ b/feign-reactor-spring-configuration/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>feign-reactor-spring-configuration</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+            <version>2.2.7.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>com.playtika.reactivefeign</groupId>
@@ -71,6 +76,7 @@
         <dependency>
             <groupId>com.netflix.ribbon</groupId>
             <artifactId>ribbon-core</artifactId>
+            <version>2.7.18</version>
         </dependency>
 
         <dependency>
